--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -7,10 +7,10 @@
   <body>
     <h1>Create a Team and Heroes</h1>
     <form action="/" method="post">
-      <p>Team Name: <input type="text" name="name"></p>
-      <p>Team Motto: <input type="text" name="motto"></p>
+      <p>Team Name: <input type="text" name="team[name]"></p>
+      <p>Team Motto: <input type="text" name="team[motto]"></p>
       <h2>Hero 1</h2>
-      <p>Hero Name: <input type="text" name="hero_name"></p>
+      <p>Hero Name: <input type="text" name="team[hero][][name]"></p>
       <p>Hero Power: <input type="text" name="hero_power"></p>
       <p>Hero Biography: <input type="text" name="hero_bio"></p>
 
