--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -10,9 +10,9 @@
       <p>Team Name: <input type="text" name="team[name]"></p>
       <p>Team Motto: <input type="text" name="team[motto]"></p>
       <h2>Hero 1</h2>
-      <p>Hero Name: <input type="text" name="team[hero][][name]"></p>
-      <p>Hero Power: <input type="text" name="hero_power"></p>
-      <p>Hero Biography: <input type="text" name="hero_bio"></p>
+      <p>Hero Name: <input type="text" name="team[heros][][name]"></p>
+      <p>Hero Power: <input type="text" name="team[heros][][pwoer]"></p>
+      <p>Hero Biography: <input type="text" name="team[heros][][bio]"></p>
 
     </form>
   </body>
