--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -11,7 +11,7 @@
       <p>Team Motto: <input type="text" name="team[motto]"></p>
       <h2>Hero 1</h2>
       <p>Hero Name: <input type="text" name="team[heros][][name]"></p>
-      <p>Hero Power: <input type="text" name="team[heros][][pwoer]"></p>
+      <p>Hero Power: <input type="text" name="team[heros][][power]"></p>
       <p>Hero Biography: <input type="text" name="team[heros][][bio]"></p>
 
     </form>
