automatically backed up by learn

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -13,6 +13,18 @@
       <p>Hero Name: <input type="text" name="team[heros][][name]"></p>
       <p>Hero Power: <input type="text" name="team[heros][][power]"></p>
       <p>Hero Biography: <input type="text" name="team[heros][][bio]"></p>
+      <h2>Hero 1</h2>
+      <p>Hero Name: <input type="text" name="team[heros][][name]"></p>
+      <p>Hero Power: <input type="text" name="team[heros][][power]"></p>
+      <p>Hero Biography: <input type="text" name="team[heros][][bio]"></p>
+      <h2>Hero 2</h2>
+      <p>Hero Name: <input type="text" name="team[heros][][name]"></p>
+      <p>Hero Power: <input type="text" name="team[heros][][power]"></p>
+      <p>Hero Biography: <input type="text" name="team[heros][][bio]"></p>
+      <h2>Hero 3</h2>
+      <p>Hero Name: <input type="text" name="team[heros][][name]"></p>
+      <p>Hero Power: <input type="text" name="team[heros][][power]"></p>
+      <p>Hero Biography: <input type="text" name="team[heros][][bio]"></p>
 
     </form>
   </body>
