automatically backed up by learn

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -25,7 +25,7 @@
       <p>Hero Name: <input type="text" name="team[heros][][name]"></p>
       <p>Hero Power: <input type="text" name="team[heros][][power]"></p>
       <p>Hero Biography: <input type="text" name="team[heros][][bio]"></p>
-
+      <p><input type="submit" value="Submit"></p>
     </form>
   </body>
 </html>
