--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Create a Team and Heroes</h1>
-    <form action="/" method="post">
+    <form action="/teams" method="post">
       <p>Team Name: <input type="text" name="team[name]"></p>
       <p>Team Motto: <input type="text" name="team[motto]"></p>
       <h2>Hero 1</h2>
