--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -7,8 +7,10 @@
   <body>
     <h1><%=@team.name%></h1>
     <h2><%=@team.motto%></h2>
-    <% @heros.each do |hero|
+    <% @heros.each do |hero| %>
     <h3><%=hero.name%></h3>
+    <p><%=hero.power%></p>
+    <p><%=hero.bio%></p>
     <% end %>
   </body>
 </html>
