--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -5,12 +5,12 @@
     <title>Teams</title>
   </head>
   <body>
-    <h1><%=@team.name%></h1>
-    <h2><%=@team.motto%></h2>
+    <h1>Team Name: <%=@team.name%></h1>
+    <h2>Team Motto: <%=@team.motto%></h2>
     <% @heros.each do |hero| %>
-    <h3><%=hero.name%></h3>
-    <p><%=hero.power%></p>
-    <p><%=hero.bio%></p>
+    <h3>Hero Name: <%=hero.name%></h3>
+    <p>Hero Ppwer: <%=hero.power%></p>
+    <p>Hero Biography: <%=hero.bio%></p>
     <% end %>
   </body>
 </html>
