--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -7,6 +7,7 @@
   <body>
     <h1>Team Name: <%=@team.name%></h1>
     <h2>Team Motto: <%=@team.motto%></h2>
+    <p>Team Heros:</p>
     <% @heros.each do |hero| %>
     <h3>Hero Name: <%=hero.name%></h3>
     <p>Hero Ppwer: <%=hero.power%></p>
