--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -10,7 +10,7 @@
     <p>Team Heros:</p>
     <% @heros.each do |hero| %>
     <h3>Hero Name: <%=hero.name%></h3>
-    <p>Hero Ppwer: <%=hero.power%></p>
+    <p>Hero Power: <%=hero.power%></p>
     <p>Hero Biography: <%=hero.bio%></p>
     <% end %>
   </body>
