--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -5,7 +5,7 @@
     <title>Create a Team and Heroes</title>
   </head>
   <body>
-    <h1>Create a Team and Heroes</h1>
+    <h1>Create a Team and Heroes!</h1>
     <form action="/teams" method="post">
       <p>Team Name: <input type="text" name="team[name]"></p>
       <p>Team Motto: <input type="text" name="team[motto]"></p>
