--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -10,7 +10,7 @@
       <p>Team Name: <input type="text" name="team[name]"></p>
       <p>Team Motto: <input type="text" name="team[motto]"></p>
       <h2>Hero 1</h2>
-      <p>Hero Name: <input type="text" name="team[heros][][name]"></p>
+      <p>Hero Name: <input type="text" name="team[heros][][name]" id="member1_name"></p>
       <p>Hero Power: <input type="text" name="team[heros][][power]"></p>
       <p>Hero Biography: <input type="text" name="team[heros][][bio]"></p>
       <h2>Hero 2</h2>
