--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -11,16 +11,16 @@
       <p>Team Motto: <input type="text" name="team[motto]"></p>
       <h2>Hero 1</h2>
       <p>Hero Name: <input type="text" name="team[heros][][name]" id="member1_name"></p>
-      <p>Hero Power: <input type="text" name="team[heros][][power]"></p>
-      <p>Hero Biography: <input type="text" name="team[heros][][bio]"></p>
+      <p>Hero Power: <input type="text" name="team[heros][][power]" id="member1_power"></p>
+      <p>Hero Biography: <input type="text" name="team[heros][][bio]" id="member1_bio"></p>
       <h2>Hero 2</h2>
-      <p>Hero Name: <input type="text" name="team[heros][][name]"></p>
-      <p>Hero Power: <input type="text" name="team[heros][][power]"></p>
-      <p>Hero Biography: <input type="text" name="team[heros][][bio]"></p>
+      <p>Hero Name: <input type="text" name="team[heros][][name]" id="member2_name"></p>
+      <p>Hero Power: <input type="text" name="team[heros][][power]" id="member2_power"></p>
+      <p>Hero Biography: <input type="text" name="team[heros][][bio]" id="member2_bio"></p>
       <h2>Hero 3</h2>
-      <p>Hero Name: <input type="text" name="team[heros][][name]"></p>
-      <p>Hero Power: <input type="text" name="team[heros][][power]"></p>
-      <p>Hero Biography: <input type="text" name="team[heros][][bio]"></p>
+      <p>Hero Name: <input type="text" name="team[heros][][name]" id="member3_name"></p>
+      <p>Hero Power: <input type="text" name="team[heros][][power]" id="member3_power"></p>
+      <p>Hero Biography: <input type="text" name="team[heros][][bio]" id="member3_bio"></p>
       <p><input type="submit" value="Submit"></p>
     </form>
   </body>
