automatically backed up by learn

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -21,7 +21,7 @@
       <p>Hero Name: <input type="text" name="team[heros][][name]" id="member3_name"></p>
       <p>Hero Power: <input type="text" name="team[heros][][power]" id="member3_power"></p>
       <p>Hero Biography: <input type="text" name="team[heros][][bio]" id="member3_bio"></p>
-      <p><input type="submit" value="Submit"></p>
+      <p><input type="submit" value="Submit" id="submit"></p>
     </form>
   </body>
 </html>
